--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/ripliveit/riplive_admin",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-rsync": "~0.6.2",
     "grunt-ssh": "~0.12.0"
   }
