--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ php:
   - 5.6
   - hhvm
   - nightly
-before_script: 
+before_script:
   - npm install
+script:
+  - php -v
 after_script: 
   - grunt deploy
