--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "0.0.1",
   "main": "index.php",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "check-update": "npm-check -u"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,10 @@
   },
   "homepage": "https://github.com/ripliveit/riplive_admin",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-rsync": "~0.6.2",
-    "grunt-ssh": "~0.12.0"
+    "grunt": "1.0.4",
+    "grunt-cli": "1.3.2",
+    "grunt-rsync": "3.0.0",
+    "grunt-ssh": "0.12.9",
+    "npm-check": "5.9.0"
   }
 }
